--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,17 @@
   "name": "mesopi-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "db:seeds": "knex --knexfile db.config.js seed:run"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "knex": "^2.0.0",
+    "mysql": "^2.18.1"
   }
 }
